<resources>
    <string name="app_name">TryMamma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TryMamma</string>
    <string name="nav_header_subtitle">TryMamma@trym.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_settingsd">Settingsd</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Diets</string>
    <string name="menu_slideshow">WorkOuts</string>
    <string name="menu_plan">Plan</string>
    <string name="button">Button</string>
    <string name="notification_activity">NotificationView</string>
    <string name="mail_fab">Mail Button</string>
    <string name="reminder">Reminder</string>
    <string name="app_banner">app banner</string>
    <string name="enter_email">Enter Your Email</string>
    <string name="enter_pass">Enter Your Password</string>
    <string name="already_registered">Already Registered? Sign In</string>
    <string name="not_registered">Not Registered? Sign Up</string>
    <string name="username">Enter your Name</string>
    <string name="ani_mage">girlimagedance</string>
    <string name="Text1st">If you\'ve tried -- and failed -- in the past to curb your love of take-out pizza and ice cream, perhaps you simply needed the right motivation: nurturing a beautiful, healthy baby. Eating well is especially important now. Your body uses the nutrients and energy provided by the food you eat both to build a healthy baby and to keep your body strong. A healthful diet for pregnancy is one that contains most or all of the essential nutrients your body needs and one that provides the right balance of carbohydrate, fat, and protein without too many calories.  To build your healthful pregnancy diet, choose a range of nutrient-packed foods from the following groups:  Fruits: 3-4 servings a day. Choose fresh, frozen, canned (in natural juice, not heavy syrup), and dried fruit or 100-percent fruit juice.</string>
    <string name="Text2nd">Include at least one citrus fruit (orange, grapefruit, tangerine) each day because citrus fruits are rich in vitamin C. Limit fruit juice consumption to no more than 1 cup a day; juice is high in calories compared with whole fruit, and it does not deliver the fiber that whole fruit does. One serving equals one medium piece of fruit such as an apple or orange, or 1/2 of a banana; 1/2 cup of chopped fresh, cooked, or canned fruit; 1/4 cup dried fruit; or 3/4 cup of 100-percent fruit juice. Vegetables: 3-5 servings a day. To get the greatest range of nutrients, think of a rainbow as you fill your plate with vegetables. Choose vegetables that are dark green (broccoli, kale, spinach), orange (carrots, sweet potatoes, pumpkin, winter squash), yellow (corn, yellow peppers), and red (tomatoes, red peppers). One serving equals 1 cup of raw leafy vegetables such as spinach or lettuce, or 1/2 cup chopped vegetables, cooked or raw. Dairy foods: 3 servings a day. </string>
    <string name="Text3rd">Dairy foods provide the calcium that your baby needs to grow and that you need to keep your bones strong. To get sufficient calcium, drink milk and eat yogurt and cheese. To save on calories and saturated fat, choose low-fat or non-fat dairy products. If you are lactose intolerant and can\'t digest milk, choose lactose-free milk products, calcium-fortified foods, and beverages such as calcium-fortified soymilk. One serving equals 1 cup of milk or yogurt, 11/2 ounces of natural cheese such as cheddar or mozzarella, or 2 ounces of processed cheese such as American. Protein: 2-3 servings a day. </string>
    <string name="Text4th">Select lean meats, poultry, fish, and eggs prepared with minimal amounts of fat. Beans (pinto, kidney, black, garbanzo) are also a good source of protein, as are lentils, split peas, nuts, and seeds. One serving equals2-3 ounces of cooked meat, poultry, or fish, which is about the size of a deck of cards; 1 cup of cooked beans; 2 eggs; 2 tablespoons of peanut butter; or 1 ounce (about 1/4 cup) of nuts. Whole grains: 3 servings a day. It is recommended that you eat a minimum of six servings of grains per day; at least 50 percent of those grains should be whole grains. Whole grain breads, cereals, crackers, and pasta provide fiber, which is very important during pregnancy. Eating a variety of fiber-containing foods helps maintain proper bowel function and can reduce your chances of developing constipation and hemorrhoids. As often as possible, select whole grain foods over those made with white flour. For example, eat whole wheat bread rather than white bread. One serving equals 1 slice of bread, 1 ounce of ready-to-eat cereal (about 1 cup of most cereals), or 1/2 cup cooked cereal, rice, or pasta.</string>
    <string name="title_activity_search_view">searchViewActivity</string>
    <string name="splash_screen_text">মা</string>
    <string name="profile">Profile</string>
    <string name="signout">SignOut</string>
    <string name="daily_information">Detect Problems</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="question_fatigue">Are you feeling fatigued?</string>
    <string name="question_weak">Are you feeling weak?</string>
    <string name="question_pale_skin">Do you have pale skin?</string>
    <string name="question_dizzy">Are you feeling dizzy?</string>
    <string name="question_shortness_breath">Are you having shortness of breath?</string>
    <string name="question_thirst_increased">Have your thirst increased?</string>
    <string name="question_frequent_urination">Are you having frequent urination?</string>
    <string name="submit">Submit</string>
    <string name="height">Height</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="kg">KG</string>
    <string name="question_sweating">Are you sweating excessively?</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="slash">/</string>
    <string name="mmhg">mmHg</string>
    <string name="question_pelvic">Are you having any pelvic pain?</string>
    <string name="question_burning_urinating">Have you felt burning when urinating?</string>
    <string name="question_urine_unusual">Is your urine unusual(color or smell)?</string>
    <string name="height_hint">Enter height in inches</string>
    <string name="weight_hint">Enter weight in kg</string>
    <string name="high">high</string>
    <string name="low">low</string>
    <string name="question_gums_bleed">Do your gums bleed when brushing?</string>
    <string name="question_tender_gums">Do you have tender gums?</string>
    <string name="question_gum_inflammation">Do you have gum inflammation?</string>
    <string name="question_dark_red_gums">Do you have dark red gums?</string>
    <string name="question_swollen_gums">Do you have swollen or puffy gums?</string>
    <string name="disease">Know your Disease</string>
</resources>