<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/woman"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/calendar"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/infant"
            android:title="@string/menu_plan" />
        <item
            android:id="@+id/nav_data_entry"
            android:icon="@drawable/data_entry"
            android:title="@string/daily_information" />

        <item
            android:id="@+id/nav_disease"
            android:icon="@drawable/doc"
            android:title="@string/disease" />

    </group>
</menu>